- Fixed website UI that had nav bar and website shifted to the right messing up the ui and creating gaps

--- a/src/Components/Itinerary/itinerary.css
+++ b/src/Components/Itinerary/itinerary.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     gap: 8px;
     padding: 0.8rem;
+    padding-top: 6rem;
 }
 
 .itinerary-page table {
